--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,49 @@
-<form id="addLinkForm">
-    <label for="linkTitle">Link Title:</label>
-    <input type="text" id="linkTitle" name="title" required>
-    
-    <label for="linkUrl">Link URL:</label>
-    <input type="url" id="linkUrl" name="url" required>
-    
-    <button type="submit">Add Link</button>
-  </form>
-  
 
+
+<h1>Links Collection</h1>
 <ul>
-    {% for link in linksCollection %}
-      <li>
-        <a href="{{ link.url }}">{{ link.title }}</a>
-      </li>
-    {% endfor %}
-  </ul>
+  {% for link in links %}
+    <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+  {% endfor %}
+</ul>
 
-  <script src="add-link.js"></script>
+<form id="addLinkForm">
+  <label for="linkTitle">Link Title:</label>
+  <input type="text" id="linkTitle" name="title" required>
+  
+  <label for="linkUrl">Link URL:</label>
+  <input type="url" id="linkUrl" name="url" required>
+  
+  <button type="submit">Add Link</button>
+</form>
+
+<script>
+  const form = document.getElementById('addLinkForm');
+
+  form.addEventListener('submit', async (event) => {
+    event.preventDefault();
+
+    const formData = new FormData(form);
+    const title = formData.get('title');
+    const url = formData.get('url');
+
+    try {
+      const response = await fetch('/.netlify/functions/manage-links', {
+        method: 'POST',
+        body: JSON.stringify({ title, url }),
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      });
+
+      if (response.ok) {
+        alert('Link added successfully');
+        window.location.reload(); // Refresh the page to show the updated links
+      } else {
+        alert('Error adding link');
+      }
+    } catch (error) {
+      console.error('Error:', error);
+    }
+  });
+</script>
